fall back to target package for base subject scanning, and add class loaders back in